prepping for deploy. 1st try with materialize. pretty great. using leaflet.sleep.js to help with shitty usability on leaflet. fingers crossed.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,10 @@
 body {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 100vw;
-  height: 60px;
-}
+
 #mapid {
   height: 70vh;
-  width: 80vw;
+  width: 100%;
 }
